--- a/Twittermenti/Base.lproj/Main.storyboard
+++ b/Twittermenti/Base.lproj/Main.storyboard
@@ -89,16 +89,17 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A0Y-sz-hX3">
                                 <rect key="frame" x="8" y="361" width="359" height="266.66666666666674"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76x-fR-6qG">
-                                        <rect key="frame" x="179.66666666666666" y="133.33333333333331" width="0.0" height="0.0"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76x-fR-6qG">
+                                        <rect key="frame" x="0.0" y="0.0" width="359" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="76x-fR-6qG" firstAttribute="centerX" secondItem="A0Y-sz-hX3" secondAttribute="centerX" id="qY4-3N-cZf"/>
-                                    <constraint firstItem="76x-fR-6qG" firstAttribute="centerY" secondItem="A0Y-sz-hX3" secondAttribute="centerY" id="sol-qv-kBp"/>
+                                    <constraint firstAttribute="trailing" secondItem="76x-fR-6qG" secondAttribute="trailing" id="9i7-dj-U0V"/>
+                                    <constraint firstItem="76x-fR-6qG" firstAttribute="top" secondItem="A0Y-sz-hX3" secondAttribute="top" id="D1z-Zi-9Gx"/>
+                                    <constraint firstItem="76x-fR-6qG" firstAttribute="leading" secondItem="A0Y-sz-hX3" secondAttribute="leading" id="HYH-NM-YT0"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kMw-Mn-B14">
@@ -139,7 +140,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="106.47321428571428"/>
+            <point key="canvasLocation" x="130.40000000000001" y="106.40394088669952"/>
         </scene>
     </scenes>
 </document>
